GNOME Bugzilla – Bug 594951
Crash in soup_socket_disconnect
Last modified: 2009-09-12 11:31:49 UTC
It seems that the SoupSocket() can have its last reference dropped by soup_message_io_cleanup() during the "readable" signal. I guess SoupSocket should self-ref before emitting those signals and self-unref afterwards. Stack trace: Program terminated with signal 6, Aborted.
+ Trace 217513
Created attachment 143034 [details] [review] Keep reference on SoupSocket while emitting signals Potentiel fix: The socket could have its last external referenced dropped by soup_message_io_cleanup() during the "readable" signal and then abort() when trying to emit the "disconnected" signal.
The following fix has been pushed: bf89ea0 Keep reference on SoupSocket while emitting signals Thanks for the patch.
Created attachment 143049 [details] [review] Keep reference on SoupSocket while emitting signals The socket could have its last external referenced dropped by soup_message_io_cleanup() during the "readable" signal and then abort() when trying to emit the "disconnected" signal.