libsoup/soup-socket.c
@@ -1058,6 +1058,11 @@ soup_socket_disconnect (SoupSocket *sock)
 	if (already_disconnected)
 		return;
 
+	/* Keep ref around signals in case the object is unreferenced
+	 * in a handler
+	 */
+	g_object_ref (sock);
+
 	/* Give all readers a chance to notice the connection close */
 	g_signal_emit (sock, signals[READABLE], 0);
 
@@ -1065,6 +1070,8 @@ soup_socket_disconnect (SoupSocket *sock)
 
 	/* Then let everyone know we're disconnected */
 	g_signal_emit (sock, signals[DISCONNECTED], 0);
+
+	g_object_unref (sock);
 }
 
 /**
